--- a/css/base.css
+++ b/css/base.css
@@ -49,16 +49,17 @@
 --distance-9: 2.25rem;
 --distance-10: 2.5rem;
 --distance-11: 2.75rem;
---distance-12: 3.25rem;
---distance-13: 3.5rem;
---distance-14: 3.75rem;
---distance-15: 4rem;
+--distance-12: 3rem;
+--distance-13: 3.25rem;
+--distance-14: 3.5rem;
+--distance-15: 3.75rem;
+--distance-16: 4rem;
 
 /*****************
     *** Shadow ***
 *****************/
     --shadow-small-light: .15rem .15rem 0 rgba(0, 0, 0, .1);
-    --shadow-small-light: .25rem .25rem 0 rgba(0, 0, 0, .1)
+    --shadow-small-light: .25rem .25rem 0 rgba(0, 0, 0, .1);
 
 /*****************
    *** Borders ***
@@ -108,15 +109,15 @@ min-height: 100vh;
 ***********************/
 .bg-primary, .btn.primary { background-color: var(--color-primary);}
 .bg-secondary {background-color: var(--color-secondary);}
-.bg-success, .btn-secondary {background-color: var (--color-success);}
+.bg-success, .btn-secondary {background-color: var(--color-success);}
 .bg-info, .btn-info { background-color: var(--color-info);}
 .bg-warning, .btn-warning {background-color: var(--color-warning);}
-.bg-danger, .btn-danger {background-color: var (--color-danger);}
+.bg-danger, .btn-danger {background-color: var(--color-danger);}
 .bg-light, .btn-light { background-color: var(--color-light);}
 .bg-dark, .btn-dark { background-color: var(--color-dark);}
 .bg-white, .btn-white{background-color: var(--color-white);}
-.bg-cozy, .btn-cozy {background-color: var (--color-cozy);}
-.bg-transparent {background-color: var (--color-transparent);}
+.bg-cozy, .btn-cozy {background-color:var(--color-cozy);}
+.bg-transparent {background-color: var(--color-transparent);}
 .bg-dark-transparent {background-color: var(--color-dark-transparent);}
 
 /******************
