--- a/css/base.css
+++ b/css/base.css
@@ -25,7 +25,7 @@
 --display-md: 1.8rem;
 --display-lg: 2rem;
 --display-xl: 2.5rem;
---display-xxl: 3.5rem;
+--display-xxl: 3rem;
 
 /*****************
 *** Lineheight ***
@@ -41,7 +41,7 @@
 --distance-1: .25rem;
 --distance-2: .5rem;
 --distance-3: .75rem;
---distance-4: .1rem;
+--distance-4: 1rem;
 --distance-5: 1.25rem;
 --distance-6: 1.5rem;
 --distance-7: 1.75rem;
