--- a/css/flex.css
+++ b/css/flex.css
@@ -8,6 +8,7 @@
 **************/
 .flex-row{ flex-direction: row;}
 .flex-column { flex-direction:column}
+.flex-row-reverse { flex-direction: row-reverse;}
 .flex-grow{flex-grow: 1;} /*När vi använder flex grow så ska den utöka sin bredd*/
 
 /**********************
