Navigation Drop-down menu

--- a/css/flex.css
+++ b/css/flex.css
@@ -1,7 +1,8 @@
 /**************
 *** Display ***
 **************/
-.d-flex{ display: flex;}
+.d-flex { display: flex; }
+.d-none { display: none; }
 
 /**************
 *** Flex ******
