--- a/css/layout.css
+++ b/css/layout.css
@@ -34,6 +34,12 @@
 .mt-15, .my-15 {margin-top: var(--distance-15);} /* 4rem*/
 .mt-15, .my-15 {margin-top: var(--distance-15);} 
 /* Ökar med 0.25 med varje steg*/
+.mr-4, .mx-4 { margin-right: var(--distance-4); }
+.ml-4, .mx-4 { margin-left: var(--distance-4) ; }
+.mr-6, .mx-6 { margin-right: var(--distance-6); }
+.ml-6, .mx-6 { margin-left: var(--distance-6); }
+
+
 
 /**************
 *** Padding ***
@@ -88,7 +94,7 @@ nav div a:not(:first-child) {margin-left: var(--distance-12); }
 **************/
 .borders-radius {border-radius: var(--border-radius-sm); }
 .border-small-white {border: var(--border-xs-white); }
-
+.border.bottom-xs { border-bottom: var(--border-xs);}
 
 /*****************
 *** Colored Bar***
