--- a/css/base.css
+++ b/css/base.css
@@ -100,7 +100,7 @@ min-height: 100vh;
 
 }
 .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 { font-family: "Dosis", "Open Sans", sans-serif; font-weight: 700; letter-spacing: 0.5rem;}
-.ht, h1 { font-size: 3.5rem; }
+.ht, h1 { font-size: var(--distance-13); }
 
 
 
