--- a/css/layout.css
+++ b/css/layout.css
@@ -22,24 +22,26 @@
 .ml-auto, .mx-auto{margin-left: auto;}
 
 .mt-0, .my-0 {margin-top: var(--distance-0);} /* 0rem*/
-.mt-0, .my-0 {margin-top: var(--distance-0);} 
+.mt-0, .my-0 {margin-bottom: var(--distance-0);} 
 .mt-1, .my-1 {margin-top: var(--distance-1);} /* .25rem*/
-.mt-1, .my-1 {margin-top: var(--distance-1);} 
+.mt-1, .my-1 {margin-bottom: var(--distance-1);} 
 .mt-2, .my-2 {margin-top: var(--distance-2);} /* .5rem*/
-.mt-2, .my-2 {margin-top: var(--distance-2);} 
+.mt-2, .my-2 {margin-bottom: var(--distance-2);} 
 .mt-4, .my-4 {margin-top: var(--distance-4);} /* 1rem*/
-.mt-4, .my-4 {margin-top: var(--distance-4);} 
+.mt-4, .my-4 {margin-bottom: var(--distance-4);} 
 .mt-6, .my-6 {margin-top: var(--distance-6);} /* 1.5rem*/
-.mt-6, .my-6 {margin-top: var(--distance-6);} 
+.mt-6, .my-6 {margin-bottom: var(--distance-6);} 
 .mt-8, .my-8 {margin-top: var(--distance-8);} /* 2rem*/
-.mt-8, .my-8 {margin-top: var(--distance-8);} 
+.mt-8, .my-8 {margin-bottom: var(--distance-8);} 
 .mt-10, .my-10 {margin-top: var(--distance-10);} /* 2.5rem*/
-.mt-10, .my-10 {margin-top: var(--distance-10);} 
+.mt-10, .my-10 {margin-bottom: var(--distance-10);} 
 .mt-12, .my-12 {margin-top: var(--distance-12);} /* 3rem*/
-.mt-12, .my-12 {margin-top: var(--distance-12);} 
+.mt-12, .my-12 {margin-bottom: var(--distance-12);} 
 .mt-15, .my-15 {margin-top: var(--distance-15);} /* 4rem*/
-.mt-15, .my-15 {margin-top: var(--distance-15);} 
+.mt-15, .my-15 {margin-bottom: var(--distance-15);} 
+
 /* Ökar med 0.25 med varje steg*/
+
 .mr-4, .mx-4 { margin-right: var(--distance-4); }
 .ml-4, .mx-4 { margin-left: var(--distance-4) ; }
 .mr-6, .mx-6 { margin-right: var(--distance-6); }
@@ -120,6 +122,7 @@ nav div a:not(:first-child) {margin-left: var(--distance-12); }
 .slider-container {width: 25%; /* Display first of 4 images */}
 .slider-image { width: 100%; object-fit: cover; }
 /*.slider-animation {animation: 30s slider-keyframes infinite; } */
+
 @keyframes slider-keyframes {
     0% { left: 0%; } /* Bild 1*/
     15% { left: -100%; } /* Bild 2*/
@@ -127,5 +130,5 @@ nav div a:not(:first-child) {margin-left: var(--distance-12); }
     45% { left: -300%; } /* Bild 4*/
     60% { left: -200%; } /* Bild 5*/
     75% { left: -100%; } /* Bild 6*/
-    100% { left: 0%; }
+    100% { left: 0%; }   /* Tillbaka till bild 1*/
 }
