--- a/css/flex.css
+++ b/css/flex.css
@@ -11,6 +11,7 @@
 .flex-column { flex-direction: column}
 .flex-row-reverse { flex-direction: row-reverse;}
 .flex-grow{flex-grow: 1;} /*När vi använder flex grow så ska den utöka sin bredd*/
+.flex-wrap { flex-wrap: wrap; }
 
 /**********************
 *** Align & Justify ***
