--- a/css/layout.css
+++ b/css/layout.css
@@ -59,7 +59,10 @@
 .p-12 {padding: var(--distance-12)}
 .p-15 {padding: var(--distance-15)}
 
-.pr-12 {padding: var(--distance-12)}
+.pr-4, .px-4 { padding-right: var(--distance-4); }
+.pl-4, .px-4 {padding-left: var(--distance-4); }
+.pr-12, .px-12 { padding-right: var(--distance-12); }
+.pl-12, .px-12 {padding-left: var(--distance-12); }
 
 /*****************
 *** Typography ***
@@ -83,12 +86,14 @@
 /*************
 *** Circle ***
 *************/
-.circle {border-radius: 100%; }
+.circle { border-radius: 100%; }
+
 
 /**************
 *** Shadows ***
 **************/
 .shadow-sm {box-shadow: var(--shadow-small-light); }
+.shadow-lg {box-shadow: var(--shadow-large-light); }
 
 /************
 ***Buttons***
@@ -106,7 +111,7 @@ nav div a:not(:first-child) {margin-left: var(--distance-12); }
 .borders-radius {border-radius: var(--border-radius-sm); }
 .border-small-white {border: var(--border-xs-white); }
 .border.bottom-xs { border-bottom: var(--border-xs);}
-
+.border-sm { border: var(--border-sm); }
 /*****************
 *** Colored Bar***
 *****************/
@@ -134,3 +139,14 @@ nav div a:not(:first-child) {margin-left: var(--distance-12); }
     75% { left: -100%; } /* Bild 6*/
     100% { left: 0%; }   /* Tillbaka till bild 1*/
 }
+
+/***************
+*** features ***
+***************/
+.f-width { max-width: 33%;}
+
+/************
+*** Icons ***
+*************/
+.icon-feature {width: 7.6rem; height: 7.6rem; padding: 0.375rem; }
+.icon-circle { width: 6.2rem; height: 6.2rem; line-height: 6rem; } /*Anledningen till varför vi använder oss av line height är för att ikonen ska positioneras ut korrekt förhållande till ikonen.*/
