--- a/css/layout.css
+++ b/css/layout.css
@@ -69,6 +69,7 @@
 *****************/
 .text-decoration-none {text-decoration: none; }
 .text-center { text-align: center; }
+.text-uppercase { text-transform: uppercase; }
 
 .text-size-xxs {font-size: var(--display-xxs); }
 .text-size-xs {font-size: var(--display-xs); }
@@ -110,8 +111,10 @@ nav div a:not(:first-child) {margin-left: var(--distance-12); }
 **************/
 .borders-radius {border-radius: var(--border-radius-sm); }
 .border-small-white {border: var(--border-xs-white); }
-.border.bottom-xs { border-bottom: var(--border-xs);}
+.border.bottom-xs { border-bottom: var(--border-xs); }
 .border-sm { border: var(--border-sm); }
+.border-transparent { border: var(--border-transparent) }
+
 /*****************
 *** Colored Bar***
 *****************/
