--- a/css/layout.css
+++ b/css/layout.css
@@ -90,7 +90,7 @@
 *** Circle ***
 *************/
 .circle { border-radius: 100%; }
-
+.circle { width: 15rem; height: 15rem; }
 
 /**************
 *** Shadows ***
