--- a/css/layout.css
+++ b/css/layout.css
@@ -1,8 +1,10 @@
 /**************
 *** Widths ***
 **************/
-.max-width {max-width: 192rem; }
-.card-width {max-width: 60rem; }
+.max-width { max-width: 192rem; }
+.card-width { max-width: 60rem; }
+.width-lg { max-width: 50%; }
+.min-width-xxl { min-width: 100%;}
 
 /***************
 *** Position ***
@@ -23,6 +25,7 @@
 .ml-auto, .mx-auto{margin-left: auto;}
 
 .m-6 { margin: var(--distance-6); }
+.m-15 { margin: var(--distance-15); }
 
 .mt-0, .my-0 {margin-top: var(--distance-0);} /* 0rem*/
 .mb-0, .my-0 {margin-bottom: var(--distance-0);} 
@@ -87,8 +90,8 @@
 .text-size-xxl {font-size: var(--display-xxl); }
 
 .lh-sm{ line-height: var(--line-height-sm);}
-.lh-md{line-height: var(--line-height-md);}
-.lh-lg{line-height:var(--line-height-lg)}
+.lh-md{ line-height: var(--line-height-md);}
+.lh-lg{ line-height: var(--line-height-lg);}
 
 
 /*************
@@ -162,9 +165,10 @@ nav div a:not(:first-child) {margin-left: var(--distance-12); }
 *************/
 .icon-feature {width: 7.6rem; height: 7.6rem; padding: 0.375rem; }
 .icon-circle { width: 6.2rem; height: 6.2rem; line-height: 6rem; } /*Anledningen till varför vi använder oss av line height är för att ikonen ska positioneras ut korrekt förhållande till ikonen.*/
+.icon-form-control { right: 10px; top: 10px; }
 
 /***************
-*** Statistics ***
+*** Statistics *
 ***************/
 .statistics-image {
     background-image: url('../images/fun-facts/fun-facts-bg-img.jpg');
